ncc/testsuite/negative/genspec1.n
def t = System.Collections.Hashtable.[int, int]; // E: System.Collections.Hashtable..ctor doesn't take generic parameters
